--- a/com.codeaffine.gonsole.releng/repository/rootfiles/index.html
+++ b/com.codeaffine.gonsole.releng/repository/rootfiles/index.html
@@ -3,7 +3,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Git+ Repository</title>
+    <title>Gonsole Repository</title>
     <style type="text/css">
     <!--
       * { font-family: sans-serif; }
@@ -11,13 +11,14 @@
     </style>
   </head>
   <body>
-    <h1>Git+ Repository</h1>
+    <h1>Gonsole Repository</h1>
     <p>
-      This is the software repository that contains Gonsole, 
-      an integrated Git Console for Eclipse.
+      Gonsole is an interactive Git Console integrated into Eclipse.
     </p>
     <p>
-      The software can be directly installed into the Eclipse IDE.
+      This is a software repository for the Eclipse IDE.
+      To install the features contained here, press Help > Install New Software... in your Eclipse 
+      IDE and enter the URL of this site.
     </p>
   </body>
 </html>
