Integrate with Google Analytics

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@ We will soon provide early access versions that can be consumed from a software 
 * Link to project page: Please see the [project page](http://.../) for details on features and usage.
 * ([Published on Eclipse Marketplace](<???TBD marketplace url>))
 * google analytics
-* sub-domain
 * logo inspired by
 --->
 
@@ -72,6 +71,16 @@ Includes code from <a href="https://eclipse.org/jgit/">JGit</a>, which is publis
 <a href="http://www.eclipse.org/org/documents/edl-v10.php">Eclipse Distribution License - v 1.0</a>.
 </p>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-35034221-2', 'rherrmann.github.io');
+  ga('send', 'pageview');
+
+</script>
 </body>
 
 </html>
