--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@ the Eclipse IDE. It lets you enter common Git commands directly into the
 Eclipse Console View</a> and displays their output within this view.
 </p>
 
-<!--
 <p style="text-align: center"><img src="screenshot.png" /></p>
--->
 
 <p>
 The project is currently in its proof of concept stage and of almost no practical use.
@@ -35,8 +33,6 @@ We will soon provide early access versions that can be consumed from a software 
 ??? TBD:
 * Link to project page: Please see the [project page](http://.../) for details on features and usage.
 * ([Published on Eclipse Marketplace](<???TBD marketplace url>))
-* google analytics
-* logo inspired by
 --->
 
 
@@ -69,6 +65,10 @@ The code is published under the terms of the <a href="http://www.eclipse.org/leg
 <p>
 Includes code from <a href="https://eclipse.org/jgit/">JGit</a>, which is published under the terms of the
 <a href="http://www.eclipse.org/org/documents/edl-v10.php">Eclipse Distribution License - v 1.0</a>.
+</p>
+<p>
+The logo was inspired by the <a href="http://git-scm.com/downloads/logos">Git logo</a>
+by <a href="http://twitter.com/jasonlong">Jason Long</a> and stylizes a command prompt.
 </p>
 
 <script>
