Add link to codeaffine.com

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
 
+
+<div id="top-right">
+  <a href="http://codeaffine.com"><img src="codeaffine-adventure.png" /></a>
+</div>
+
 <p style="text-align: center"><img src="gonsole.png" /></p>
 <h1 style="text-align: center">Git Console Integration for the Eclipse IDE</h1>
 <p style="text-align: center; margin-bottom: 3em">
@@ -26,8 +31,8 @@ Eclipse Console View</a> and displays their output within this view.
 <p style="text-align: center"><img src="screenshot.png" /></p>
 
 <p>
-The project is currently in its proof of concept stage and of almost no practical use.
-We will soon provide early access versions that can be consumed from a software repository.
+The project's progress will be documented in a series of articles where
+<a href="">gonsole weeks: git init console</a> marks the start.
 </p>
 
 
@@ -45,7 +50,8 @@ to interact with the repository.
 
 <h2>Installation</h2>
 <p>
-Install from this Eclipse software repository: http://rherrmann.github.io/gonsole/repository/
+Install from this Eclipse software repository:
+<a href="http://rherrmann.github.io/gonsole/repository/">http://rherrmann.github.io/gonsole/repository/</a>
 </p>
 
 <h2>Source Code</h2>
