Add acknowlegment section

--- a/index.html
+++ b/index.html
@@ -68,9 +68,15 @@ The code is published under the terms of the <a href="http://www.eclipse.org/leg
 Includes code from <a href="https://eclipse.org/jgit/">JGit</a>, which is published under the terms of the
 <a href="http://www.eclipse.org/org/documents/edl-v10.php">Eclipse Distribution License - v 1.0</a>.
 </p>
+
+<h2>Acknowledgment</h2>
 <p>
 The logo was inspired by the <a href="http://git-scm.com/downloads/logos">Git logo</a>
 by <a href="http://twitter.com/jasonlong">Jason Long</a> and stylizes a command prompt.
+</p>
+<p>
+Thanks to <a href="http://eclipsesource.com/blogs/author/hstaudacher/">Holger</a>
+and <a href="https://twitter.com/bmuskalla">Benny</a> for threir valuable input.
 </p>
 
 <script>
