Remove 'interactive' from UI labels
Instead of 'Interactive Git Console' the console is now labelled just
'Git Console'.

--- a/com.codeaffine.gonsole.releng/repository/rootfiles/index.html
+++ b/com.codeaffine.gonsole.releng/repository/rootfiles/index.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Gonsole Repository</h1>
     <p>
-      Gonsole is an interactive Git Console integrated into Eclipse.
+      Gonsole is a Git Console for the Eclipse IDE.
     </p>
     <p>
       This is a software repository for the Eclipse IDE.
