Add a Usage section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,27 @@ The project's progress is documented in a series of <em>gonsole weeks</em> artic
 </p>
 
 
+<h2>Usage</h2>
+<p>
+To start a new console session, select <strong>Git Console</strong> from the <strong>Open Console</strong> drop-down 
+of the Console View.
+All console sessions are listed in <strong>Display Selected Console</strong> drop-down that can be used
+to switch between sessions.
+</p>
+<p>
+The key combination <strong>Ctrl+Space</strong> opens a content assist popup that shows all availble 
+commands.
+</p>
+<p>
+The command prompt indicates the current repository to which the entered commands apply to. 
+To change the current repository, use the <strong>use</strong> command.
+The command requires either the absolute path to the .git folder of a repository or the name
+or a registered repository. Repositories can be registered with the Git Console either through the 
+Team &gt; Git Console &gt; Repository Locations preference page or through the EGit repository view.  
+</p>
+</p>
+
+
 <h2>Requirements</h2>
 <p>
 Eclipse 3.8 (Juno) or newer.
