Fix typo in Usage section

--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@ commands.
 <p>
 The command prompt indicates the current repository to which the entered commands apply to. 
 To change the current repository, use the <strong>use</strong> command.
-The command requires either the absolute path to the .git folder of a repository or the name
-or a registered repository. Repositories can be registered with the Git Console either through the 
-Team &gt; Git Console &gt; Repository Locations preference page or through the EGit repository view.  
+This command requires either the absolute path to the .git folder of a repository or the name
+of a registered repository. Repositories can be registered with the Git Console either through the 
+<strong>Team &gt; Git Console &gt; Repository Locations</strong> preference page or through the EGit 
+repository view.  
 </p>
 </p>
 
