Add usage hint for history

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ to switch between sessions.
 <p>
 The key combination <strong>Ctrl+Space</strong> opens a content assist popup that shows all availble 
 commands.
+To see a history of recently typed commands, use the <strong>Arrow Up</strong> key.
 </p>
 <p>
 The command prompt indicates the current repository to which the entered commands apply to. 
