Add hint for minimum required EGit version

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ repository view.
 Eclipse 3.8 (Juno) or newer.
 </p>
 
+
 <h2>Installation</h2>
 <p>
 <a href="http://marketplace.eclipse.org/marketplace-client-intro?mpc_install=1789454" title="Drag and drop into a running Eclipse workspace to install Gonsole">
@@ -102,6 +103,10 @@ The easiest way to install it is to drag the Install icon into your Eclipse.
 If you prefer, you can also install Gonsole directly from this software repository:
 <a href="http://rherrmann.github.io/gonsole/repository/">http://rherrmann.github.io/gonsole/repository/</a>
 </p>
+<p>
+If you whish to use the optional EGit integration, please note that Gonsole requires EGit 3.3 or later.
+</p>
+
 
 <h2>Git Included</h2>
 <p>
