Explain how to change text colors in usage section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@ repository view.
 </div>
 <div style="clear: both;">&nbsp;</div>
 
+<div style="margin-top: 2em;">
+<img style="float:right" src="color-preferences.png"/>
+Text colors can be changed on the <strong>General &gt; Appearance &gt; Colors and Fonts</strong> 
+preference page.
+<br />
+Please note that changes only affect new console sessions.
+</div>
+<div style="clear: both;">&nbsp;</div>
+
 
 <h2>Requirements</h2>
 <p>
