Grammar: way is ..

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Eclipse 3.8 (Juno) or newer.
 </p>
 <p>
 Gonsole is available in the <a href="https://marketplace.eclipse.org/content/gonsole">Eclipse Marketplace</a>. 
-The easiest way to install it is to drag the Install icon into your Eclipse.
+The easiest way to install is to drag the Install icon into your Eclipse.
 </p>
 <p>
 If you prefer, you can also install Gonsole directly from this software repository:
