Update Requirements section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Please note that changes only affect new console sessions.
 
 <h2>Requirements</h2>
 <p>
-Eclipse 3.8 (Juno) or newer.
+Eclipse 3.7 (Indigo) or newer.
 </p>
 
 
