Link to project homepage from repository index.html

--- a/com.codeaffine.gonsole.releng/repository/rootfiles/index.html
+++ b/com.codeaffine.gonsole.releng/repository/rootfiles/index.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Gonsole Repository</h1>
     <p>
-      Gonsole is a Git Console for the Eclipse IDE.
+      <a href="http://rherrmann.github.io/gonsole/">Gonsole</a> is a Git Console for the Eclipse IDE.
     </p>
     <p>
       This is a software repository for the Eclipse IDE.
