--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Please note that changes only affect new console sessions.
 
 <h2>Requirements</h2>
 <p>
-Eclipse 3.7 (Indigo) or newer.
+Eclipse 4.4 (Luna) on JRE 8 or newer.
 </p>
 
 
