Update usage section with help command

--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@ of a registered repository.
 <div style="clear: both;">&nbsp;</div>
 
 <div style="margin-top: 2em;">
+<img style="float:right" src="help-command.png"/>
+The <strong>help</strong> command lists a short decription of all available commands. 
+With <strong>help &lt;command&gt;</strong>, usage information about a specific command can be obtained. 
+</div>
+<div style="clear: both;">&nbsp;</div>
+
+<div style="margin-top: 2em;">
 <img style="float:right" src="repository-configuration.png"/>
 Repositories can be registered with the Git Console either through the 
 <strong>Team &gt; Git Console &gt; Repository Locations</strong> preference page or through the EGit 
