Mention 'Show In' menu in documentation

--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@ With <strong>help &lt;command&gt;</strong>, usage information about a specific c
 <div style="clear: both;">&nbsp;</div>
 
 <div style="margin-top: 2em;">
+<img style="float:right" src="show-in-menu.png"/>
+The <strong>Show In</strong> menu (<kbd>Alt+Shift+W</kbd>) has a menu entry that opens a Git Console 
+and selects the repository to which the selected file or folder belongs.
+</div>
+<div style="clear: both;">&nbsp;</div>
+
+<div style="margin-top: 2em;">
 <img style="float:right" src="repository-configuration.png"/>
 Repositories can be registered with the Git Console either through the 
 <strong>Team &gt; Git Console &gt; Repository Locations</strong> preference page or through the EGit 
