Increase margin of images in usage section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Eclipse Console View</a> and displays their output within this view.
 <h2>Usage</h2>
 
 <div style="margin-top: 2em;">
-<img style="float:right;" src="open-console-dropdown.png"/>
+<img style="float:right; margin-left: 1em;" src="open-console-dropdown.png"/>
 To start a new console session, select <strong>Git Console</strong> from the <strong>Open Console</strong> drop-down 
 of the Console View.
 <br />
@@ -48,27 +48,27 @@ to open a console session for the corresponding repository.
 <div style="clear: both;">&nbsp;</div>
 
 <div style="margin-top: 2em;">
-<img style="float:right" src="select-console-dropdown.png"/>
+<img style="float:right; margin-left: 1em;" src="select-console-dropdown.png"/>
 All console sessions are listed in the <strong>Display Selected Console</strong> drop-down that can be used
 to switch between sessions.
 </div>
 <div style="clear: both;">&nbsp;</div>
 
 <div style="margin-top: 2em;">
-<img style="float:right" src="content-assist.png"/>
+<img style="float:right; margin-left: 1em;" src="content-assist.png"/>
 The key combination <strong>Ctrl+Space</strong> opens a content assist popup that shows all availble 
 commands.
 </div>
 <div style="clear: both;">&nbsp;</div>
 
 <div style="margin-top: 2em;">
-<img style="float:right" src="command-history.png"/>
+<img style="float:right; margin-left: 1em;" src="command-history.png"/>
 To see a history of recently typed commands, use the <strong>Arrow Up</strong> key.
 </div>
 <div style="clear: both;">&nbsp;</div>
 
 <div style="margin-top: 2em;">
-<img style="float:right" src="use-command.png"/>
+<img style="float:right; margin-left: 1em;" src="use-command.png"/>
 The command prompt indicates the current repository to which the entered commands apply to. 
 To change the current repository, use the <strong>use</strong> command.
 <br/>
@@ -78,21 +78,21 @@ of a registered repository.
 <div style="clear: both;">&nbsp;</div>
 
 <div style="margin-top: 2em;">
-<img style="float:right" src="help-command.png"/>
+<img style="float:right; margin-left: 1em;" src="help-command.png"/>
 The <strong>help</strong> command lists a short decription of all available commands. 
 With <strong>help &lt;command&gt;</strong>, usage information about a specific command can be obtained. 
 </div>
 <div style="clear: both;">&nbsp;</div>
 
 <div style="margin-top: 2em;">
-<img style="float:right" src="show-in-menu.png"/>
+<img style="float:right; margin-left: 1em;" src="show-in-menu.png"/>
 The <strong>Show In</strong> menu (<kbd>Alt+Shift+W</kbd>) has a menu entry that opens a Git Console 
 and selects the repository to which the selected file or folder belongs.
 </div>
 <div style="clear: both;">&nbsp;</div>
 
 <div style="margin-top: 2em;">
-<img style="float:right" src="repository-configuration.png"/>
+<img style="float:right; margin-left: 1em;" src="repository-configuration.png"/>
 Repositories can be registered with the Git Console either through the 
 <strong>Team &gt; Git Console &gt; Repository Locations</strong> preference page or through the EGit 
 repository view.
@@ -100,7 +100,7 @@ repository view.
 <div style="clear: both;">&nbsp;</div>
 
 <div style="margin-top: 2em;">
-<img style="float:right" src="color-preferences.png"/>
+<img style="float:right; margin-left: 1em;" src="color-preferences.png"/>
 Text colors can be changed on the <strong>General &gt; Appearance &gt; Colors and Fonts</strong> 
 preference page.
 <br />
