Add link to zipped repository

--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@ The easiest way to install is to drag the Install icon into your Eclipse.
 If you prefer, you can also install Gonsole directly from this software repository:
 <a href="http://rherrmann.github.io/gonsole/repository/">http://rherrmann.github.io/gonsole/repository/</a>
 </p>
+<p>
+A zipped version of the repository for offline use can be downloaded here:
+<a href="http://rherrmann.github.io/gonsole/repository/gonsole.zip">http://rherrmann.github.io/gonsole/repository/gonsole.zip</a>
+</p>
 
 
 <h2>Git Included</h2>
