Add 'discontinued' notice

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </div>
 
 <p style="text-align: center"><img src="gonsole.png" /></p>
+<h1 style="text-align: center">NOTICE (August 2021): This project is discontinued and no longer under active development.</h1>
+<br />
 <h1 style="text-align: center">Git Console Plug-in for the Eclipse IDE</h1>
 <p style="text-align: center; margin-bottom: 3em">
 <a href="https://travis-ci.org/rherrmann/gonsole"><img src="https://travis-ci.org/rherrmann/gonsole.png" /></a>
@@ -25,8 +27,8 @@
 </p>
 
 <p>
-<a href="http://git-scm.com/">Git</a> is a popular version control system. 
-This project integrates a Git console into the Eclipse IDE. 
+<a href="http://git-scm.com/">Git</a> is a popular version control system.
+This project integrates a Git console into the Eclipse IDE.
 It lets you enter common Git commands directly into the
 <a href="http://help.eclipse.org/kepler/index.jsp?topic=%2Forg.eclipse.jdt.doc.user%2Freference%2Fviews%2Fconsole%2Fref-console_view.htm">
 Eclipse Console View</a> and displays their output within this view.
@@ -38,11 +40,11 @@ Eclipse Console View</a> and displays their output within this view.
 
 <div style="margin-top: 2em;">
 <img style="float:right; margin-left: 1em;" src="open-console-dropdown.png"/>
-To start a new console session, select <strong>Git Console</strong> from the <strong>Open Console</strong> drop-down 
+To start a new console session, select <strong>Git Console</strong> from the <strong>Open Console</strong> drop-down
 of the Console View.
 <br />
 <br />
-Alternatively, select a file, folder or project and use the <strong>Show In</strong> menu (<kbd>Alt+Shift+W</kbd>) 
+Alternatively, select a file, folder or project and use the <strong>Show In</strong> menu (<kbd>Alt+Shift+W</kbd>)
 to open a console session for the corresponding repository.
 </div>
 <div style="clear: both;">&nbsp;</div>
@@ -56,7 +58,7 @@ to switch between sessions.
 
 <div style="margin-top: 2em;">
 <img style="float:right; margin-left: 1em;" src="content-assist.png"/>
-The key combination <strong>Ctrl+Space</strong> opens a content assist popup that shows all availble 
+The key combination <strong>Ctrl+Space</strong> opens a content assist popup that shows all availble
 commands.
 </div>
 <div style="clear: both;">&nbsp;</div>
@@ -69,39 +71,39 @@ To see a history of recently typed commands, use the <strong>Arrow Up</strong> k
 
 <div style="margin-top: 2em;">
 <img style="float:right; margin-left: 1em;" src="use-command.png"/>
-The command prompt indicates the current repository to which the entered commands apply to. 
+The command prompt indicates the current repository to which the entered commands apply to.
 To change the current repository, use the <strong>use</strong> command.
 <br/>
 This command requires either the absolute path to the .git folder of a repository or the name
-of a registered repository. 
+of a registered repository.
 </div>
 <div style="clear: both;">&nbsp;</div>
 
 <div style="margin-top: 2em;">
 <img style="float:right; margin-left: 1em;" src="help-command.png"/>
-The <strong>help</strong> command lists a short decription of all available commands. 
-With <strong>help &lt;command&gt;</strong>, usage information about a specific command can be obtained. 
+The <strong>help</strong> command lists a short decription of all available commands.
+With <strong>help &lt;command&gt;</strong>, usage information about a specific command can be obtained.
 </div>
 <div style="clear: both;">&nbsp;</div>
 
 <div style="margin-top: 2em;">
 <img style="float:right; margin-left: 1em;" src="show-in-menu.png"/>
-The <strong>Show In</strong> menu (<kbd>Alt+Shift+W</kbd>) has a menu entry that opens a Git Console 
+The <strong>Show In</strong> menu (<kbd>Alt+Shift+W</kbd>) has a menu entry that opens a Git Console
 and selects the repository to which the selected file or folder belongs.
 </div>
 <div style="clear: both;">&nbsp;</div>
 
 <div style="margin-top: 2em;">
 <img style="float:right; margin-left: 1em;" src="repository-configuration.png"/>
-Repositories can be registered with the Git Console either through the 
-<strong>Team &gt; Git Console &gt; Repository Locations</strong> preference page or through the EGit 
+Repositories can be registered with the Git Console either through the
+<strong>Team &gt; Git Console &gt; Repository Locations</strong> preference page or through the EGit
 repository view.
 </div>
 <div style="clear: both;">&nbsp;</div>
 
 <div style="margin-top: 2em;">
 <img style="float:right; margin-left: 1em;" src="color-preferences.png"/>
-Text colors can be changed on the <strong>General &gt; Appearance &gt; Colors and Fonts</strong> 
+Text colors can be changed on the <strong>General &gt; Appearance &gt; Colors and Fonts</strong>
 preference page.
 <br />
 Please note that changes only affect new console sessions.
@@ -122,7 +124,7 @@ Eclipse 4.4 (Luna) on JRE 8 or newer.
 </a>
 </p>
 <p>
-Gonsole is available in the <a href="https://marketplace.eclipse.org/content/gonsole">Eclipse Marketplace</a>. 
+Gonsole is available in the <a href="https://marketplace.eclipse.org/content/gonsole">Eclipse Marketplace</a>.
 The easiest way to install is to drag the Install icon into your Eclipse.
 </p>
 <p>
